# ComptonLabExperience

./: .gitignore  CMakeLists.txt  DetectorAngles.csv  README.md  Simulation.cc
ROOTmacros/: DataAnalysis.C
include/: Analysis.hh  action.hh  construction.hh  detector.hh  event.hh  generator.hh  hit.hh  myglobals.hh  physics.hh  run.hh  stepping.hh  tracking.hh  verbose.hh
macros/: run.mac  vis.mac
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  hit.cc  physics.cc  run.cc  stepping.cc  tracking.cc  verbose.cc
